mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: devops
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    app: mysql
